# advmiceng1

./: .gitignore  LICENCE  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
src/advmiceng1/: __init__.py  _version.py
tests/: test_simple.py
