[metadata]
name = advmiceng1
version = 0.0.5
author = advmiceng
author_email = advmiceng@gmail.com
description = A complete template example package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
